--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logoSinF.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guardias</title>
+    <title>JG Service</title>
   </head>
   <body>
     <div id="root"></div>
