--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logoSinF.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JG Service</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/png" href="/logoSinF.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="Servicio JG">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoSinF.png">
+
+  <meta name="theme-color" content="#0f172a" />
+  <title>JG Service</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
