--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/logoSinF.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Servicio JG">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoSinF.png">
+  <link rel="apple-touch-icon" href="/logoSinF.png">
 
   <meta name="theme-color" content="#0f172a" />
   <title>JG Service</title>
